deploy/kubernetes/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbward-server
  namespace: dbward
  labels:
    app.kubernetes.io/name: dbward-server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dbward-server
